env/dev/app-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app1-route
  namespace: default
spec:
  parentRefs:
    - name: gcp-shared-gateway
      namespace: default

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /app1

      backendRefs:
        - name: app-one-service
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app2-route
  namespace: default
spec:
  parentRefs:
    - name: gcp-shared-gateway
      namespace: default

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /app2

      backendRefs:
        - name: app-two-service
          port: 80
