env/dev/argo-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd # Defined directly within the argocd namespace
spec:
  parentRefs:
    - name: gcp-shared-gateway
      namespace: default # References the parent LB in the default namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
